# riptide_software

riptide_bringup/launch/: pole_aligner.launch
riptide_controllers/: CMakeLists.txt
riptide_controllers/action/: Align.action
riptide_controllers/cfg/: AlignmentController.cfg  Vehicle_Properties2.yaml  vehicle_properties2.yaml
riptide_controllers/include/riptide_controllers/: alignment_controller.h  thruster_controller.h
riptide_controllers/launch/: thruster_controller.launch
riptide_controllers/scripts/: alignment_controller.py
riptide_controllers/src/: alignment_controller.cpp  thruster_controller.cpp
riptide_hardware/: CMakeLists.txt
riptide_hardware/include/riptide_hardware/: test_pub_sub.h  test_sub_pub.h
riptide_hardware/launch/: test_pub_sub.launch  tsb.launch
riptide_hardware/src/: imu_processor.cpp  test_pub_sub.cpp  test_sub_pub.cpp
riptide_msgs/: CMakeLists.txt
riptide_msgs/msg/: Thrust.msg  test.msg
